2006-04-18  Gary Thomas  <gary@mlbassoc.com>

	* include/hal_arch.h: Adjust stack sizes - they were too small
	(on machines with FPU) and didn't account for stack checking.

2005-07-29  Gary Thomas  <gary@mlbassoc.com>

	* include/arch.inc: Add one-time-include protection since newer
	versions of the GNU assembler complain about redefining macros.

2005-03-14  Peter Korsgaard  <jacmetd@sunsite.dk>

	* src/redboot_linux_exec.c (do_exec): Correctly set bi_size.

2004-11-04  Peter Korsgaard  <jacmet@sunsite.dk>

	* src/ppc_stub.c (__is_single_step): Removed compiler warning
	about pointer / integer comparison.
	
2004-05-27  Gary Thomas  <gary@mlbassoc.com>

	* src/redboot_linux_exec.c (do_exec): Be sensitive to value in
	"entry_address" as this can indicate if the image to be executed
	is valid (the "load" functions set it to "NO_MEMORY" when invalid)

2004-04-29  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/hal_arch.h (HAL_SET_GDB_FLOATING_POINT_REGISTERS): Make
	absolutely safe with respect to strict-aliasing.
	(HAL_SET_GDB_FLOATING_POINT_REGISTERS): Ditto.

2004-04-23  Gary Thomas  <gary@mlbassoc.com>

	* include/hal_arch.h: 
	* src/redboot_linux_exec.c (do_exec): Fix compiler warning about bad
	cast (dereferencing type-punned pointer will break strict-aliasing rules)

2004-04-22  Jani Monoses <jani@iv.ro>

	 * cdl/hal_powerpc.cdl :
	 Invoke tail with stricter syntax that works in latest coreutils. 

2003-12-11  Gary Thomas  <gary@mlbassoc.com>

	* include/hal_intr.h: Add macros to manipulate machine check enable
	bit in the MSR.

2003-12-08  Gary Thomas  <gary@mlbassoc.com>

	* src/hal_misc.c (cyg_hal_exception_handler): Only declare __mem_fault_handler
	if GDB stubs are included (and it will be used).

	* src/vectors.S: Minor change which makes newer versions of assembler
	happy (at least for binutils-2.14.90.0.6).

2003-12-05  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/hal_intr.h: hal_delay_us() is a C function.
